added the achievements system full

--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -299,6 +299,15 @@
                         </li>
 
                         <li class="sidebar-item">
+                            <a class="sidebar-link" href="{% url 'achievements' %}" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-trophy"></i>
+                                </span>
+                                <span class="hide-menu">Achievements</span>
+                            </a>
+                        </li>
+
+                        <li class="sidebar-item">
                             <a class="sidebar-link" href="{% url 'administrator_feedbacks' %}" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-list"></i>
