--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -136,6 +136,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'our_team' %}">Our Team</a>
                     </li>
+                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'our_achievers' %}">Our Achievers</a>
+                    </li>
 
                     <li class="nav-item">
                         <a class="nav-link article-link" style="text-decoration: underline;
