--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -507,7 +507,6 @@
                             <span class="hide-menu">Help Desk</span>
                         </li>
 
-
                         <!-- <li class="sidebar-item">
                             <a class="sidebar-link" href="{% url 'notifications' %}" aria-expanded="false">
                                 <span>
@@ -541,6 +540,21 @@
                                     <i class="ti ti-user"></i>
                                 </span>
                                 <span class="hide-menu">My Profile</span>
+                            </a>
+                        </li>
+
+                        <!-- ========================= COLLABORATION ============================= -->
+                        <li class="nav-small-cap">
+                            <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                            <span class="hide-menu">Collaboration</span>
+                        </li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link {% block hackathon_active %} {% endblock %}" href="{% url 'hackathon_dashboard' %}" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-users-group"></i>
+                                </span>
+                                <span class="hide-menu">Hackathon Teams 🚀</span>
                             </a>
                         </li>
                     </ul>
