--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -7,8 +7,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon"
-        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>🔥</text></svg>">
+    <link rel="icon" type="image/png" href="{% static 'img/home/angaar_logo-cicle.png' %}">
+
+    <meta property="og:title" content="The Angaar Batch🔥">
+    <meta property="og:description" content="Agr Angaar Hai Tere Houslo Me, To Bas Dekhke Mat Ja... Seekh... Or Lga de... ANGAAR🔥">
+    <meta property="og:image" content="https://theangaarbatch.in/static/img/home/angaari_logo.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://theangaarbatch.in">
 
     <title>
         {% block title %}
@@ -136,7 +141,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'our_team' %}">Our Team</a>
                     </li>
-                    
+
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'our_achievers' %}">Our Achievers</a>
                     </li>
@@ -237,7 +242,7 @@
                 <div class="custom-footer-section">
                     <h3>Contact</h3>
                     <p>Email: theangaarbatch@gmail.com</p>
-                    
+
                     <p>Phone: +918273619318</p>
                 </div>
             </div>
