--- a/templates/student/hackathon/list_teams.html
+++ b/templates/student/hackathon/list_teams.html
@@ -200,7 +200,7 @@ Student -> Available Hackathon Teams
 </div>
 {% endblock %}
 
-{% block extra_js %}
+{% block myjs %}
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         const joinRequestModal = new bootstrap.Modal(document.getElementById('joinRequestModal'));
